# lhc-web

./: .env.example  .gitignore  .vercelignore  APLICAR_SKIN.bat  LHC.sln  RpfDumper.cs  SoundController.cs  WeaponController.cs  analizar_xml.js  arma_strings.txt  build_manifest.js  buscar_awc_key.js  convert_suppressors.js  csharp_output.txt  decrypt_vp_xml.js  deploy_sound_api.js  deploy_to_vps.js  deploy_weapon_api.js  descifrar_awc.js  descomprimir_oodle.js  dump.js  dump2.js  dump3.js  escanear_memoria.js  extraer_donante.js  extraer_llave.js  extraer_llave.ps1  fix_api.js  hacker_keys.ps1  mapear_xml.js  next.config.mjs  package-lock.json  package.json  patch_output.txt  probar_todos.js  shoot_pcm.awc  tailwind.config.js  test_red_512.dds  test_server.js  upload_resident.js  (+30 more)
.claude/: settings.local.json
.netlify/: netlify.toml  state.json
LHC Sound boost/: WEAPONS_PLAYER.rpf
arma/: MKII_LEOPARDO_LHC.rpf  w_pi_pistol.rpf  w_pi_snspistol.rpf
rpf-cli/: .gitignore  Cargo.toml  README.md  build.bat
rpf-cli/.cargo/: config.toml
rpf-cli/src/: main.rs  rpf.rs  utils.rs
rpf-cli/src/commands/: create.rs  extract.rs  info.rs  list.rs  mod.rs  tree.rs  verify.rs  ytd.rs
rpf-cli/src/crypto/: cipher.rs  keys.rs  mod.rs  ng_key_hashes.rs  ng_table_hashes.rs
scratch/: LHCInjector.cs  OodleTool.cs  TestJoaat.cs  analyze_modified.js  analyze_rpf.js  append_css.js  append_missing_css.js  binary_patch.js  binary_patch_v2.js  brute_animals_vps.js  brute_ng_index.js  calc_key_index.js  check_all_enc.js  check_awc_magic.js  check_et.js  check_local_keys.js  debug_awc.js  (+174 more)
(+609 files in other folders)
